...

    title = "Saved Gravity Zen States"

    let textAttributes = [NSAttributedString.Key.foregroundColor: UIColor.systemBackground]
    navigationController?.navigationBar.titleTextAttributes = textAttributes

    let doneButton = UIBarButtonItem(title: "Done", style: .done, target: self, action: #selector(done))
    navigationItem.rightBarButtonItem = doneButton

    do {
      let data = try Data(contentsOf: FileManager.default.sceneStatesURL)
      let gravityZenStates = try JSONDecoder().decode([GravityZenState].self, from: data)
      self.gravityZenStates = gravityZenStates.reversed()
...
