...
//

import SpriteKit

enum SatelliteType: Int {
  case box
  case rectangle
}

class Satellite: SKSpriteNode {

  let type: SatelliteType
  var colorRatio: CGFloat = 0
...
